current: tested with one DM4310 MIT torque control

--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
@@ -3,58 +3,100 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: ¦ÌVision V5.35.0.0
-Copyright (C) 2021 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: mike wang, xili, LIC=47GU5-GTCBS-GKNBG-VQC47-DKADN-DABAY
+IDE-Version: µVision V5.42.0.0
+Copyright (C) 2025 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: Lokesh Patel, Reazon Holdings, LIC=----
  
 Tool Versions:
-Toolchain:       MDK-ARM Plus  Version: 5.35.0.2
-Toolchain Path:  D:\keil\core\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.06 update 7 (build 960)
-Assembler:       Armasm.exe V5.06 update 7 (build 960)
-Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
-Library Manager: ArmAr.exe V5.06 update 7 (build 960)
-Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
-CPU DLL:         SARMCM3.DLL V5.35.0.2
-Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      Segger\JL2CM3.dll V2.99.40.0
-Dialog DLL:      TCM.DLL V1.53.0.0
+Toolchain:       MDK-Lite  Version: 5.42.0.0
+Toolchain Path:  C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin
+C Compiler:      ArmClang.exe V6.23
+Assembler:       Armasm.exe V6.23
+Linker/Locator:  ArmLink.exe V6.23
+Library Manager: ArmAr.exe V6.23
+Hex Converter:   FromElf.exe V6.23
+CPU DLL:         SARMCM3.DLL V5.42.0.0
+Dialog DLL:      DCM.DLL V1.17.5.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.3.0.0
+Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
-D:\stm32\CtrlBoard-H7_4310\MDK-ARM\STM32H7.uvprojx
-Project File Date:  03/14/2024
+C:\Users\lokes\OpenArm\CtrlBoard-H7_4310\MDK-ARM\STM32H7.uvprojx
+Project File Date:  03/18/2025
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\keil\core\ARM\ARMCC\Bin'
-Build target 'STM32H7'
+*** Using Compiler 'V6.23', folder: 'C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
+Rebuild target 'STM32H7'
+assembling startup_stm32h723xx.s...
+compiling octospi.c...
+compiling fdcan.c...
+compiling gpio.c...
 compiling main.c...
+compiling dcmi.c...
+compiling i2c.c...
+compiling spi.c...
+compiling tim.c...
+compiling stm32h7xx_hal_msp.c...
+compiling usb_otg.c...
+compiling stm32h7xx_it.c...
+compiling usart.c...
+compiling stm32h7xx_hal_cortex.c...
+compiling stm32h7xx_hal_dcmi.c...
+compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_flash.c...
+compiling stm32h7xx_hal_flash_ex.c...
+compiling stm32h7xx_hal_rcc.c...
+compiling stm32h7xx_hal_rcc_ex.c...
+compiling stm32h7xx_hal_pwr.c...
+compiling stm32h7xx_hal_dma_ex.c...
+compiling stm32h7xx_hal_pwr_ex.c...
+compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal.c...
+compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_i2c_ex.c...
+compiling stm32h7xx_hal_exti.c...
+compiling stm32h7xx_hal_spi_ex.c...
+compiling stm32h7xx_hal_ospi.c...
+compiling stm32h7xx_hal_spi.c...
+compiling stm32h7xx_hal_fdcan.c...
+compiling stm32h7xx_hal_tim_ex.c...
+compiling stm32h7xx_hal_i2c.c...
+compiling stm32h7xx_hal_uart_ex.c...
+compiling stm32h7xx_hal_pcd_ex.c...
+compiling stm32h7xx_hal_pcd.c...
+compiling stm32h7xx_hal_uart.c...
+compiling system_stm32h7xx.c...
+compiling stm32h7xx_hal_tim.c...
+compiling can_bsp.c...
+compiling dm4310_drv.c...
+compiling stm32h7xx_ll_usb.c...
 linking...
-Program Size: Code=32676 RO-data=896 RW-data=24 ZI-data=4752  
+Program Size: Code=27600 RO-data=908 RW-data=16 ZI-data=4760  
 FromELF: creating hex file...
 "STM32H7\STM32H7.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.8.0.pack
-                ARM.CMSIS.5.8.0
+                https://www.keil.com/pack/ARM.CMSIS.6.1.0.pack
+                ARM::CMSIS@6.1.0
                 CMSIS (Common Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.5.0
+   * Component: CORE Version: 6.1.0
 
 Package Vendor: Keil
-                https://www.keil.com/pack/Keil.STM32H7xx_DFP.3.1.1.pack
-                Keil.STM32H7xx_DFP.3.1.1
-                STMicroelectronics STM32H7 Series Device Support and Examples
+                https://www.keil.com/pack/Keil.STM32H7xx_DFP.4.0.0.pack
+                Keil::STM32H7xx_DFP@4.0.0
+                STMicroelectronics STM32H7 Series Device Support
 
 <h2>Collection of Component include folders:</h2>
-  .\RTE\_STM32H7
-  D:\keil\package\ARM\CMSIS\5.8.0\CMSIS\Core\Include
-  D:\keil\package\Keil\STM32H7xx_DFP\3.1.1\Drivers\CMSIS\Device\ST\STM32H7xx\Include
+  ./RTE/_STM32H7
+  C:/Users/lokes/AppData/Local/Arm/Packs/ARM/CMSIS/6.1.0/CMSIS/Core/Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.5.0
-      Include file:  CMSIS\Core\Include\tz_context.h
+   * Component: ARM::CMSIS:CORE@6.1.0
+      Include file:  CMSIS/Core/Include/tz_context.h
 Build Time Elapsed:  00:00:04
 </pre>
 </body>
