openarm_control class, errors need to be fixed

--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.htm
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [STM32H7\STM32H7.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image STM32H7\STM32H7.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6230001: Last Updated: Tue Mar 18 21:53:41 2025
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6230001: Last Updated: Tue Mar 18 23:25:38 2025
 <BR><P>
 <H3>Maximum Stack Usage =        352 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -883,7 +883,7 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[c6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_FDCAN_GetRxMessage
 <LI><a href="#[c5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_memclr4
-<LI><a href="#[c7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;dm4310_fbdata
+<LI><a href="#[c7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;dm_fbdata
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_FDCAN_IRQHandler
 </UL>
@@ -893,7 +893,7 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[c6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_FDCAN_GetRxMessage
 <LI><a href="#[c5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_memclr4
-<LI><a href="#[c7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;dm4310_fbdata
+<LI><a href="#[c7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;dm_fbdata
 </UL>
 <BR>[Called By]<UL><LI><a href="#[a5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_FDCAN_IRQHandler
 </UL>
@@ -1764,14 +1764,14 @@ Global Symbols
 <LI><a href="#[11f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;enable_motor_mode
 </UL>
 
-<P><STRONG><a name="[c7]"></a>dm4310_fbdata</STRONG> (Thumb, 196 bytes, Stack size 8 bytes, dm4310_drv.o(.text.dm4310_fbdata))
-<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = dm4310_fbdata
+<P><STRONG><a name="[c7]"></a>dm_fbdata</STRONG> (Thumb, 196 bytes, Stack size 8 bytes, dm_drv.o(.text.dm_fbdata))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = dm_fbdata
 </UL>
 <BR>[Called By]<UL><LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_FDCAN_RxFifo1Callback
 <LI><a href="#[b2]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_FDCAN_RxFifo0Callback
 </UL>
 
-<P><STRONG><a name="[11f]"></a>enable_motor_mode</STRONG> (Thumb, 36 bytes, Stack size 16 bytes, dm4310_drv.o(.text.enable_motor_mode))
+<P><STRONG><a name="[11f]"></a>enable_motor_mode</STRONG> (Thumb, 36 bytes, Stack size 16 bytes, dm_drv.o(.text.enable_motor_mode))
 <BR><BR>[Stack]<UL><LI>Max Depth = 100<LI>Call Chain = enable_motor_mode &rArr; canx_send_data &rArr; HAL_FDCAN_AddMessageToTxFifoQ &rArr; FDCAN_CopyMessageToRAM
 </UL>
 <BR>[Calls]<UL><LI><a href="#[11e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;canx_send_data
@@ -1779,7 +1779,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[120]"></a>joint_motor_init</STRONG> (Thumb, 6 bytes, Stack size 0 bytes, dm4310_drv.o(.text.joint_motor_init))
+<P><STRONG><a name="[120]"></a>joint_motor_init</STRONG> (Thumb, 8 bytes, Stack size 0 bytes, dm_drv.o(.text.joint_motor_init))
 <BR><BR>[Called By]<UL><LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -1818,7 +1818,7 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
 </UL>
-<P><STRONG><a name="[122]"></a>mit_ctrl</STRONG> (Thumb, 204 bytes, Stack size 16 bytes, dm4310_drv.o(.text.mit_ctrl))
+<P><STRONG><a name="[122]"></a>mit_ctrl</STRONG> (Thumb, 204 bytes, Stack size 16 bytes, dm_drv.o(.text.mit_ctrl))
 <BR><BR>[Stack]<UL><LI>Max Depth = 100<LI>Call Chain = mit_ctrl &rArr; canx_send_data &rArr; HAL_FDCAN_AddMessageToTxFifoQ &rArr; FDCAN_CopyMessageToRAM
 </UL>
 <BR>[Calls]<UL><LI><a href="#[11e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;canx_send_data
