move_mit_all controls all motors using MIT ctrl

--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
@@ -28,32 +28,32 @@ Project File Date:  03/18/2025
 *** Using Compiler 'V6.23', folder: 'C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32H7'
 assembling startup_stm32h723xx.s...
-compiling gpio.c...
-compiling i2c.c...
-compiling fdcan.c...
 compiling dcmi.c...
+compiling gpio.c...
 compiling octospi.c...
+compiling i2c.c...
 compiling main.c...
+compiling fdcan.c...
 compiling spi.c...
-compiling tim.c...
 compiling usb_otg.c...
 compiling stm32h7xx_it.c...
 compiling stm32h7xx_hal_msp.c...
-compiling usart.c...
+compiling tim.c...
 compiling stm32h7xx_hal_cortex.c...
+compiling usart.c...
 compiling stm32h7xx_hal_dcmi.c...
-compiling stm32h7xx_hal_flash.c...
 compiling stm32h7xx_hal_hsem.c...
 compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_flash.c...
 compiling stm32h7xx_hal_flash_ex.c...
 compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_rcc_ex.c...
 compiling stm32h7xx_hal_pwr.c...
 compiling stm32h7xx_hal_dma_ex.c...
-compiling stm32h7xx_hal_pwr_ex.c...
-compiling stm32h7xx_hal.c...
-compiling stm32h7xx_hal_mdma.c...
 compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_pwr_ex.c...
+compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal.c...
 compiling stm32h7xx_hal_i2c_ex.c...
 compiling stm32h7xx_hal_exti.c...
 compiling stm32h7xx_hal_spi_ex.c...
@@ -61,32 +61,21 @@ compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_spi.c...
 compiling stm32h7xx_hal_fdcan.c...
 compiling stm32h7xx_hal_i2c.c...
-compiling stm32h7xx_hal_tim_ex.c...
 compiling stm32h7xx_hal_uart_ex.c...
+compiling stm32h7xx_hal_tim_ex.c...
 compiling stm32h7xx_hal_pcd_ex.c...
-compiling stm32h7xx_hal_pcd.c...
 compiling stm32h7xx_hal_uart.c...
+compiling stm32h7xx_hal_pcd.c...
 compiling system_stm32h7xx.c...
-compiling stm32h7xx_hal_tim.c...
-../User/bsp/can_bsp.c(138): error: unknown type name 'OpenArm_t'
-  138 | extern OpenArm_t arm;
-      |        ^
-../User/bsp/can_bsp.c(151): error: use of undeclared identifier 'motor'; did you mean 'goto'?
-  151 |         case 0 :dm_fbdata(&motor, g_Can1RxData,RxHeader1.DataLength);break;
-      |                            ^~~~~
-      |                            goto
-../User/bsp/can_bsp.c(151): error: expected expression
-../User/bsp/can_bsp.c(170): error: use of undeclared identifier 'motor'; did you mean 'goto'?
-  170 |         case 0 :dm_fbdata(&motor, g_Can2RxData,RxHeader2.DataLength);break;
-      |                            ^~~~~
-      |                            goto
-../User/bsp/can_bsp.c(170): error: expected expression
-5 errors generated.
 compiling can_bsp.c...
-compiling dm_drv.c...
-compiling openarm_control.c...
+compiling stm32h7xx_hal_tim.c...
 compiling stm32h7xx_ll_usb.c...
-"STM32H7\STM32H7.axf" - 5 Error(s), 0 Warning(s).
+compiling openarm_control.c...
+compiling dm_drv.c...
+linking...
+Program Size: Code=28036 RO-data=908 RW-data=16 ZI-data=5024  
+FromELF: creating hex file...
+"STM32H7\STM32H7.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -109,7 +98,6 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Target not created.
 Build Time Elapsed:  00:00:04
 </pre>
 </body>
