--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
@@ -22,58 +22,59 @@ Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
 C:\Users\lokes\OpenArm\CtrlBoard-H7_4310\MDK-ARM\STM32H7.uvprojx
-Project File Date:  03/18/2025
+Project File Date:  03/19/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32H7'
-assembling startup_stm32h723xx.s...
 compiling dcmi.c...
-compiling gpio.c...
-compiling octospi.c...
 compiling i2c.c...
-compiling main.c...
+compiling octospi.c...
 compiling fdcan.c...
+compiling gpio.c...
+assembling startup_stm32h723xx.s...
+compiling main.c...
 compiling spi.c...
-compiling usb_otg.c...
 compiling stm32h7xx_it.c...
-compiling stm32h7xx_hal_msp.c...
-compiling tim.c...
+compiling usb_otg.c...
 compiling stm32h7xx_hal_cortex.c...
+compiling tim.c...
+compiling stm32h7xx_hal_msp.c...
 compiling usart.c...
 compiling stm32h7xx_hal_dcmi.c...
-compiling stm32h7xx_hal_hsem.c...
-compiling stm32h7xx_hal_gpio.c...
 compiling stm32h7xx_hal_flash.c...
-compiling stm32h7xx_hal_flash_ex.c...
 compiling stm32h7xx_hal_rcc.c...
+compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_flash_ex.c...
+compiling stm32h7xx_hal_hsem.c...
 compiling stm32h7xx_hal_rcc_ex.c...
-compiling stm32h7xx_hal_pwr.c...
 compiling stm32h7xx_hal_dma_ex.c...
-compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_pwr.c...
+compiling stm32h7xx_hal.c...
 compiling stm32h7xx_hal_pwr_ex.c...
 compiling stm32h7xx_hal_mdma.c...
-compiling stm32h7xx_hal.c...
+compiling stm32h7xx_hal_dma.c...
 compiling stm32h7xx_hal_i2c_ex.c...
 compiling stm32h7xx_hal_exti.c...
 compiling stm32h7xx_hal_spi_ex.c...
 compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_spi.c...
-compiling stm32h7xx_hal_fdcan.c...
 compiling stm32h7xx_hal_i2c.c...
-compiling stm32h7xx_hal_uart_ex.c...
+compiling stm32h7xx_hal_fdcan.c...
 compiling stm32h7xx_hal_tim_ex.c...
+compiling stm32h7xx_hal_uart_ex.c...
 compiling stm32h7xx_hal_pcd_ex.c...
-compiling stm32h7xx_hal_uart.c...
 compiling stm32h7xx_hal_pcd.c...
-compiling system_stm32h7xx.c...
-compiling can_bsp.c...
 compiling stm32h7xx_hal_tim.c...
+compiling stm32h7xx_hal_uart.c...
+compiling system_stm32h7xx.c...
 compiling stm32h7xx_ll_usb.c...
-compiling openarm_control.c...
+compiling can_bsp.c...
+compiling led_bsp.c...
 compiling dm_drv.c...
+compiling openarm_control.c...
 linking...
-Program Size: Code=28036 RO-data=908 RW-data=16 ZI-data=5024  
+Program Size: Code=27632 RO-data=908 RW-data=20 ZI-data=5004  
 FromELF: creating hex file...
 "STM32H7\STM32H7.axf" - 0 Error(s), 0 Warning(s).
 
@@ -98,7 +99,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
