--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
@@ -22,59 +22,62 @@ Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
 C:\Users\lokes\OpenArm\CtrlBoard-H7_4310\MDK-ARM\STM32H7.uvprojx
-Project File Date:  03/19/2025
+Project File Date:  03/27/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32H7'
-compiling dcmi.c...
-compiling i2c.c...
-compiling octospi.c...
-compiling fdcan.c...
-compiling gpio.c...
 assembling startup_stm32h723xx.s...
+compiling gpio.c...
+compiling octospi.c...
+compiling i2c.c...
+compiling dcmi.c...
+compiling fdcan.c...
 compiling main.c...
 compiling spi.c...
-compiling stm32h7xx_it.c...
-compiling usb_otg.c...
-compiling stm32h7xx_hal_cortex.c...
 compiling tim.c...
 compiling stm32h7xx_hal_msp.c...
+compiling stm32h7xx_it.c...
 compiling usart.c...
+compiling usb_otg.c...
+compiling stm32h7xx_hal_cortex.c...
 compiling stm32h7xx_hal_dcmi.c...
-compiling stm32h7xx_hal_flash.c...
-compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_gpio.c...
-compiling stm32h7xx_hal_flash_ex.c...
 compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_flash.c...
+compiling stm32h7xx_hal_flash_ex.c...
+compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_rcc_ex.c...
-compiling stm32h7xx_hal_dma_ex.c...
 compiling stm32h7xx_hal_pwr.c...
-compiling stm32h7xx_hal.c...
+compiling stm32h7xx_hal_dma_ex.c...
 compiling stm32h7xx_hal_pwr_ex.c...
 compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal.c...
 compiling stm32h7xx_hal_dma.c...
 compiling stm32h7xx_hal_i2c_ex.c...
 compiling stm32h7xx_hal_exti.c...
 compiling stm32h7xx_hal_spi_ex.c...
-compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_spi.c...
-compiling stm32h7xx_hal_i2c.c...
+compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_fdcan.c...
 compiling stm32h7xx_hal_tim_ex.c...
+compiling stm32h7xx_hal_i2c.c...
 compiling stm32h7xx_hal_uart_ex.c...
 compiling stm32h7xx_hal_pcd_ex.c...
 compiling stm32h7xx_hal_pcd.c...
-compiling stm32h7xx_hal_tim.c...
 compiling stm32h7xx_hal_uart.c...
 compiling system_stm32h7xx.c...
-compiling stm32h7xx_ll_usb.c...
+compiling stm32h7xx_hal_tim.c...
 compiling can_bsp.c...
 compiling led_bsp.c...
+compiling stm32h7xx_ll_usb.c...
 compiling dm_drv.c...
 compiling openarm_control.c...
+compiling retarget_io.c...
+compiling stdout_evr.c...
+compiling EventRecorder.c...
 linking...
-Program Size: Code=27632 RO-data=908 RW-data=20 ZI-data=5004  
+Program Size: Code=29184 RO-data=932 RW-data=16 ZI-data=6296  
 FromELF: creating hex file...
 "STM32H7\STM32H7.axf" - 0 Error(s), 0 Warning(s).
 
@@ -86,20 +89,51 @@ Package Vendor: ARM
                 CMSIS (Common Microcontroller Software Interface Standard)
    * Component: CORE Version: 6.1.0
 
+Package Vendor: ARM
+                https://www.keil.com/pack/ARM.CMSIS-Compiler.2.1.0.pack
+                ARM::CMSIS-Compiler@2.1.0
+                CMSIS Compiler extensions for Arm Compiler, GCC, Clang, and IAR Compiler
+   * Component: CORE Version: 1.1.0
+   * Component: Event Recorder Version: 1.1.0
+   * Component: STDOUT Version: 1.1.0
+
+Package Vendor: ARM
+                https://www.keil.com/pack/ARM.CMSIS-View.1.2.0.pack
+                ARM::CMSIS-View@1.2.0
+                Debugger visualization of software events and statistics
+   * Component: Event Recorder Variant: DAP Version: 1.6.0
+
 Package Vendor: Keil
                 https://www.keil.com/pack/Keil.STM32H7xx_DFP.4.0.0.pack
                 Keil::STM32H7xx_DFP@4.0.0
                 STMicroelectronics STM32H7 Series Device Support
 
 <h2>Collection of Component include folders:</h2>
+  ./RTE/CMSIS-View
   ./RTE/_STM32H7
+  C:/Users/lokes/AppData/Local/Arm/Packs/ARM/CMSIS-Compiler/2.1.0/include
+  C:/Users/lokes/AppData/Local/Arm/Packs/ARM/CMSIS-View/1.2.0/EventRecorder/Include
   C:/Users/lokes/AppData/Local/Arm/Packs/ARM/CMSIS/6.1.0/CMSIS/Core/Include
 
 <h2>Collection of Component Files used:</h2>
 
+   * Component: ARM::CMSIS-Compiler:CORE@1.1.0
+      Source file:   source/armcc/retarget_io.c
+
+   * Component: ARM::CMSIS-Compiler:STDOUT:Event Recorder@1.1.0
+      Source file:   source/stdout_evr.c
+
+   * Component: ARM::CMSIS-View:Event Recorder&DAP@1.6.0
+      Include file:  EventRecorder/Config/EventRecorderConf.h
+      Include file:  EventRecorder/Include/EventRecorder.h
+      Source file:   EventRecorder/Source/EventRecorder.c
+
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:13
+
+   * Component: CMSIS-Compiler:STDOUT(API)@1.1.0
+      Include file:  include/retarget_stdout.h
+Build Time Elapsed:  00:00:19
 </pre>
 </body>
 </html>
