changed tim2 prescaler

--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
@@ -22,64 +22,64 @@ Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
 C:\Users\lokes\OpenArm\CtrlBoard-H7_4310\MDK-ARM\STM32H7.uvprojx
-Project File Date:  03/27/2025
+Project File Date:  03/31/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32H7'
-compiling i2c.c...
 assembling startup_stm32h723xx.s...
+compiling i2c.c...
+compiling octospi.c...
 compiling dcmi.c...
-compiling main.c...
 compiling gpio.c...
 compiling fdcan.c...
-compiling octospi.c...
-compiling usb_otg.c...
+compiling main.c...
 compiling spi.c...
 compiling tim.c...
-compiling stm32h7xx_hal_msp.c...
 compiling usart.c...
+compiling usb_otg.c...
 compiling stm32h7xx_it.c...
+compiling stm32h7xx_hal_msp.c...
 compiling stm32h7xx_hal_cortex.c...
 compiling stm32h7xx_hal_dcmi.c...
+compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_flash.c...
-compiling stm32h7xx_hal_hsem.c...
 compiling stm32h7xx_hal_gpio.c...
 compiling stm32h7xx_hal_flash_ex.c...
-compiling stm32h7xx_hal_rcc.c...
+compiling stm32h7xx_hal_hsem.c...
 compiling stm32h7xx_hal_rcc_ex.c...
-compiling stm32h7xx_hal_pwr.c...
 compiling stm32h7xx_hal_dma_ex.c...
-compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_pwr.c...
 compiling stm32h7xx_hal_pwr_ex.c...
 compiling stm32h7xx_hal.c...
-compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_mdma.c...
 compiling stm32h7xx_hal_i2c_ex.c...
 compiling stm32h7xx_hal_exti.c...
 compiling stm32h7xx_hal_spi_ex.c...
-compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_spi.c...
+compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_fdcan.c...
-compiling stm32h7xx_hal_tim_ex.c...
 compiling stm32h7xx_hal_i2c.c...
-compiling stm32h7xx_hal_uart_ex.c...
+compiling stm32h7xx_hal_tim_ex.c...
 compiling stm32h7xx_hal_pcd_ex.c...
-compiling stm32h7xx_hal_pcd.c...
+compiling stm32h7xx_hal_uart_ex.c...
 compiling stm32h7xx_hal_uart.c...
 compiling stm32h7xx_hal_tim.c...
-compiling can_bsp.c...
+compiling stm32h7xx_hal_pcd.c...
 compiling system_stm32h7xx.c...
-compiling led_bsp.c...
-compiling retarget_io.c...
 compiling stm32h7xx_ll_usb.c...
+compiling led_bsp.c...
+compiling can_bsp.c...
+compiling stdout_evr.c...
+compiling retarget_io.c...
 compiling dm_drv.c...
 compiling openarm_control.c...
-compiling stdout_evr.c...
 compiling EventRecorder.c...
 linking...
-Program Size: Code=31576 RO-data=976 RW-data=20 ZI-data=6308  
-FromELF: creating hex file...
-"STM32H7\STM32H7.axf" - 0 Error(s), 0 Warning(s).
+STM32H7\STM32H7.axf: error: L6050U: The code size of this image (34284 bytes) exceeds the maximum allowed for this version of the linker.
+Finished: 0 information, 0 warning, 0 error and 1 fatal error messages.
+"STM32H7\STM32H7.axf" - 1 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -133,7 +133,8 @@ Package Vendor: Keil
 
    * Component: CMSIS-Compiler:STDOUT(API)@1.1.0
       Include file:  include/retarget_stdout.h
-Build Time Elapsed:  00:00:11
+Target not created.
+Build Time Elapsed:  00:00:06
 </pre>
 </body>
 </html>
