--- a/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
+++ b/CtrlBoard-H7_4310/MDK-ARM/STM32H7/STM32H7.build_log.htm
@@ -5,10 +5,13 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.42.0.0
 Copyright (C) 2025 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Lokesh Patel, Reazon Holdings, LIC=----
+License Information: Lokesh Patel
+Reazon Holdings
+User-based license: Keil MDK Essentials
+Valid until: May 2 2025. Cached until: Apr 8 2025
  
 Tool Versions:
-Toolchain:       MDK-Lite  Version: 5.42.0.0
+Toolchain:       Keil MDK Essentials  Version: 5.42.0.0
 Toolchain Path:  C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin
 C Compiler:      ArmClang.exe V6.23
 Assembler:       Armasm.exe V6.23
@@ -27,26 +30,26 @@ Project File Date:  03/31/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32H7'
+compiling gpio.c...
 assembling startup_stm32h723xx.s...
 compiling i2c.c...
 compiling octospi.c...
 compiling dcmi.c...
-compiling gpio.c...
 compiling fdcan.c...
 compiling main.c...
 compiling spi.c...
 compiling tim.c...
-compiling usart.c...
-compiling usb_otg.c...
-compiling stm32h7xx_it.c...
 compiling stm32h7xx_hal_msp.c...
+compiling usart.c...
+compiling stm32h7xx_it.c...
+compiling usb_otg.c...
 compiling stm32h7xx_hal_cortex.c...
 compiling stm32h7xx_hal_dcmi.c...
 compiling stm32h7xx_hal_rcc.c...
-compiling stm32h7xx_hal_flash.c...
 compiling stm32h7xx_hal_gpio.c...
-compiling stm32h7xx_hal_flash_ex.c...
+compiling stm32h7xx_hal_flash.c...
 compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_flash_ex.c...
 compiling stm32h7xx_hal_rcc_ex.c...
 compiling stm32h7xx_hal_dma_ex.c...
 compiling stm32h7xx_hal_dma.c...
@@ -57,17 +60,17 @@ compiling stm32h7xx_hal_mdma.c...
 compiling stm32h7xx_hal_i2c_ex.c...
 compiling stm32h7xx_hal_exti.c...
 compiling stm32h7xx_hal_spi_ex.c...
-compiling stm32h7xx_hal_spi.c...
-compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_fdcan.c...
+compiling stm32h7xx_hal_ospi.c...
 compiling stm32h7xx_hal_i2c.c...
+compiling stm32h7xx_hal_spi.c...
 compiling stm32h7xx_hal_tim_ex.c...
-compiling stm32h7xx_hal_pcd_ex.c...
 compiling stm32h7xx_hal_uart_ex.c...
-compiling stm32h7xx_hal_uart.c...
+compiling stm32h7xx_hal_pcd_ex.c...
 compiling stm32h7xx_hal_tim.c...
 compiling stm32h7xx_hal_pcd.c...
 compiling system_stm32h7xx.c...
+compiling stm32h7xx_hal_uart.c...
 compiling stm32h7xx_ll_usb.c...
 compiling led_bsp.c...
 compiling can_bsp.c...
@@ -77,9 +80,9 @@ compiling dm_drv.c...
 compiling openarm_control.c...
 compiling EventRecorder.c...
 linking...
-STM32H7\STM32H7.axf: error: L6050U: The code size of this image (34284 bytes) exceeds the maximum allowed for this version of the linker.
-Finished: 0 information, 0 warning, 0 error and 1 fatal error messages.
-"STM32H7\STM32H7.axf" - 1 Error(s), 0 Warning(s).
+Program Size: Code=32048 RO-data=1020 RW-data=20 ZI-data=6308  
+FromELF: creating hex file...
+"STM32H7\STM32H7.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -133,8 +136,7 @@ Package Vendor: Keil
 
    * Component: CMSIS-Compiler:STDOUT(API)@1.1.0
       Include file:  include/retarget_stdout.h
-Target not created.
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
