--- a/control/canfd_control/MDK-ARM/STM32H7/STM32H7.build_log.htm
+++ b/control/canfd_control/MDK-ARM/STM32H7/STM32H7.build_log.htm
@@ -8,7 +8,7 @@ Copyright (C) 2025 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: Lokesh Patel
 Reazon Holdings
 User-based license: Keil MDK Essentials
-Valid until: May 2 2025. Cached until: Apr 28 2025
+Valid until: May 2 2025. Cached until: Apr 29 2025
  
 Tool Versions:
 Toolchain:       Keil MDK Essentials  Version: 5.42.0.0
@@ -24,62 +24,62 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.3.0.0
 Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
-C:\Users\lokes\OpenArm\canfd_control\MDK-ARM\STM32H7.uvprojx
+C:\Users\lokes\OpenArm\control\canfd_control\MDK-ARM\STM32H7.uvprojx
 Project File Date:  04/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'C:\Users\lokes\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'STM32H7'
-compiling gpio.c...
-compiling fdcan.c...
+assembling startup_stm32h723xx.s...
 compiling i2c.c...
 compiling dcmi.c...
+compiling gpio.c...
+compiling octospi.c...
+compiling fdcan.c...
 compiling main.c...
-assembling startup_stm32h723xx.s...
 compiling spi.c...
-compiling usart.c...
 compiling usb_otg.c...
-compiling stm32h7xx_it.c...
+compiling usart.c...
 compiling tim.c...
 compiling stm32h7xx_hal_msp.c...
+compiling stm32h7xx_it.c...
 compiling stm32h7xx_hal_cortex.c...
 compiling stm32h7xx_hal_dcmi.c...
+compiling stm32h7xx_hal_gpio.c...
 compiling stm32h7xx_hal_flash.c...
+compiling stm32h7xx_hal_hsem.c...
 compiling stm32h7xx_hal_flash_ex.c...
 compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_rcc_ex.c...
-compiling octospi.c...
-compiling stm32h7xx_hal_gpio.c...
-compiling stm32h7xx_hal_hsem.c...
-compiling stm32h7xx_hal_dma_ex.c...
-compiling stm32h7xx_hal_mdma.c...
-compiling stm32h7xx_hal_dma.c...
-compiling stm32h7xx_hal_pwr_ex.c...
 compiling stm32h7xx_hal_pwr.c...
+compiling stm32h7xx_hal_dma.c...
+compiling stm32h7xx_hal_dma_ex.c...
+compiling stm32h7xx_hal_pwr_ex.c...
 compiling stm32h7xx_hal.c...
+compiling stm32h7xx_hal_mdma.c...
 compiling stm32h7xx_hal_i2c_ex.c...
 compiling stm32h7xx_hal_exti.c...
 compiling stm32h7xx_hal_spi_ex.c...
-compiling stm32h7xx_hal_spi.c...
 compiling stm32h7xx_hal_ospi.c...
+compiling stm32h7xx_hal_spi.c...
 compiling stm32h7xx_hal_fdcan.c...
 compiling stm32h7xx_hal_i2c.c...
 compiling stm32h7xx_hal_tim_ex.c...
 compiling stm32h7xx_hal_uart_ex.c...
 compiling stm32h7xx_hal_pcd_ex.c...
-compiling stm32h7xx_hal_pcd.c...
 compiling stm32h7xx_hal_uart.c...
-compiling stm32h7xx_hal_tim.c...
+compiling stm32h7xx_hal_pcd.c...
 compiling system_stm32h7xx.c...
-compiling stm32h7xx_ll_usb.c...
-compiling can_bsp.c...
-compiling led_bsp.c...
+compiling stm32h7xx_hal_tim.c...
 compiling retarget_io.c...
-compiling dm_drv.c...
+compiling can_bsp.c...
+compiling stm32h7xx_ll_usb.c...
+compiling led_bsp.c...
 compiling stdout_evr.c...
+compiling dm_drv.c...
 compiling EventRecorder.c...
 linking...
-Program Size: Code=32104 RO-data=956 RW-data=20 ZI-data=7780  
+Program Size: Code=32088 RO-data=956 RW-data=20 ZI-data=7780  
 FromELF: creating hex file...
 "STM32H7\STM32H7.axf" - 0 Error(s), 0 Warning(s).
 
@@ -126,16 +126,16 @@ Package Vendor: Keil
       Source file:   source/stdout_evr.c
 
    * Component: ARM::CMSIS-View:Event Recorder&DAP@1.6.0
+      Source file:   EventRecorder/Source/EventRecorder.c
       Include file:  EventRecorder/Include/EventRecorder.h
       Include file:  EventRecorder/Config/EventRecorderConf.h
-      Source file:   EventRecorder/Source/EventRecorder.c
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
 
    * Component: CMSIS-Compiler:STDOUT(API)@1.1.0
       Include file:  include/retarget_stdout.h
-Build Time Elapsed:  00:00:10
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
